# F1-ML

./: F1Agent copy.ipynb  F1Agent.ipynb  main.py  pyproject.toml  teste1.ipynb
