[project]
name = "f1-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastf1>=3.6.0",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.26",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "matplotlib>=3.10.3",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
